crates/rimz/src/cli/teams/snapshots/rimz__cli__teams__show__tests__human_show_with_live_instance.snap
---
source: crates/rimz/src/cli/teams/show.rs
expression: "rendered(&report(vec![live_instance()]), None)"
---
forge
  source:     /tmp/.agents/teams/forge/team.toml
  layout:     planner,coder+reviewer
  leader:     planner
  validation: ready

  ROLE     PROFILE  KIND    MODEL  EFFORT  MODE
  planner  claude   claude  fable  high    auto
  (prompt stack: rimz teams show forge --json)

#feat-x · Plan (delta) (@planner)
  worktree: /repo/worktrees/feat-x · branch feat-x
  stages:   Explore → [Plan] → Implement
  pr:       none

  MEMBER    STATUS   ACTIVITY         CTX   COST  AGE
  @planner  running  reading show.rs  42%  $0.25   2m

Reach: rimz message @planner#feat-x '<text>'
Focus: rimz teams focus forge#feat-x
