crates/rimz/src/cli/teams/snapshots/rimz__cli__teams__show__tests__human_show_without_live_instance.snap
---
source: crates/rimz/src/cli/teams/show.rs
expression: "rendered(&report(Vec::new()), Some(\"ended-lane\"))"
---
no live instance in #ended-lane

forge
  source: /tmp/.agents/teams/forge/team.toml
  layout: planner,coder+reviewer

  @planner   claude  fable  <- leader
  signals   ci.failed → @planner
  (prompt stack: rimz teams show forge --json)
